--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~10.0.2",
     "bootstrap": "^4.5.0",
     "g": "^2.0.1",
+    "intl": "^1.2.5",
     "jquery": "^3.5.1",
     "json-server": "^0.16.1",
     "rxjs": "~6.5.5",
